--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,16 @@
+/* CSS below universally declares that all boxes have 0 padding and 0 margin. */
 * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
 
+/* CSS below changes the background color through out the entire body. */
 body {
     background-color: #d9dcd6;
 }
 
+/* CSS below give the header 20 px padding, a hierarchy of text, a background color, and text color. */
 header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -15,6 +18,7 @@ header {
     color: #ffffff;
 }
 
+/* CSS below instructs the h1 in header to be inline with other text and sets the font size to 48 */
 header h1 {
     display: inline-block;
     font-size: 48px;
@@ -45,15 +49,29 @@ header nav ul li {
     margin-left: 25px;
 }
 
+/* CSS below will change the colors of a tags */
 a {
     color: #ffffff;
     text-decoration: none;
 }
 
+/* CSS below will change the font size of paragraph text to 16 */
 p {
     font-size: 16px;
 }
 
+footer {
+    padding: 30px;
+    clear: both;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    text-align: center;
+}
+
+footer h2 {
+    font-size: 20px;
+}
+
+/* CSS below makes changes to the div with the hero class. It places an image as a background, sets it's size and behavior. */
 .hero {
     height: 800px;
     width: 100%;
@@ -134,15 +152,4 @@ p {
 .social-media-marketing h2 {
     margin-bottom: 20px;
     font-size: 36px;
-}
-
-footer {
-    padding: 30px;
-    clear: both;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    text-align: center;
-}
-
-footer h2 {
-    font-size: 20px;
-}
+};
