--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -108,31 +108,25 @@ footer h2 {
     background-color: #2589bd;
 }
 
-.benefit-lead,
-.benefit-brand,
-.benefit-cost {
+.benefits article {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-lead h3,
-.benefit-brand h3,
-.benefit-cost h3 {
+
+.benefits article h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-lead img,
-.benefit-brand img,
-.benefit-cost img {
+
+.benefits article img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
 
-.search-engine-optimization,
-.online-reputation-management,
-.social-media-marketing {
+.content article {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -140,16 +134,11 @@ footer h2 {
     background-color: #0072bb;
     color: #ffffff;
 }
-
-.search-engine-optimization img,
-.online-reputation-management img,
-.social-media-marketing img {
+.content article img {
     max-height: 200px;
 }
 
-.search-engine-optimization h2,
-.online-reputation-management h2,
-.social-media-marketing h2 {
+.content article h2 {
     margin-bottom: 20px;
     font-size: 36px;
 };
