--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,16 +1,16 @@
-/* CSS below universally declares that all boxes have 0 padding and 0 margin. */
+/* Universally declares that all boxes have 0 padding and 0 margin. */
 * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
 
-/* CSS below changes the background color through out the entire body. */
+/* Changes the background color through out the entire body. */
 body {
     background-color: #d9dcd6;
 }
 
-/* CSS below give the header 20 px padding, a hierarchy of text, a background color, and text color. */
+/* Changes header 20 px padding, a hierarchy of text, a background color, and text color. */
 header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -18,18 +18,18 @@ header {
     color: #ffffff;
 }
 
-/* CSS below instructs the h1 in header to be inline with other text and sets the font size to 48 */
+/* Instructs the h1 in header to be inline with other text and sets the font size to 48 */
 header h1 {
     display: inline-block;
     font-size: 48px;
 }
 
-/* this CSS will change the letters within the span with class = "seo" */
+/* Recolors the letters within the span with class seo */
 header h1 .seo {
     color: #d9dcd6;
 }
 
-/* header div now nav. this CSS pushes the nav section to right alignment */
+/* Modifies the navigation menu within header*/
 header nav {
     padding-top: 15px;
     margin-right: 20px;
@@ -38,28 +38,29 @@ header nav {
     font-size: 20px;
 }
 
-/* this item is now header nav. The CSS will remove any bullet points for the ul. */
+/* Removes bullet points from the unordered list that makes the navigation menu */
 header div ul {
     list-style-type: none;
 }
 
-/* changed div to nav here. this CSS still makes the ul an inline block */
+/* Displays navigation menu inline */
 header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
 
-/* CSS below will change the colors of a tags */
+/* Recolors a tag contents */
 a {
     color: #ffffff;
     text-decoration: none;
 }
 
-/* CSS below will change the font size of paragraph text to 16 */
+/* Changes the font size of paragraph text to 16 */
 p {
     font-size: 16px;
 }
 
+/* Customizes the footer giving the listed properties. */
 footer {
     padding: 30px;
     clear: both;
@@ -67,11 +68,12 @@ footer {
     text-align: center;
 }
 
+/* Gives the h2 in the footer 20px font. */
 footer h2 {
     font-size: 20px;
 }
 
-/* CSS below makes changes to the div with the hero class. It places an image as a background, sets it's size and behavior. */
+/* Changes the div with the class, hero. It places an image as a background. */
 .hero {
     height: 800px;
     width: 100%;
@@ -81,22 +83,26 @@ footer h2 {
     background-position: center;
 }
 
+/* Floats the image to the left allowing text to fill on the right */
 .float-left {
     float: left;
     margin-right: 25px;
 }
 
+/* Floats the image to the right allowing text to fill on the left */
 .float-right {
     float: right;
     margin-left: 25px;
 }
 
+/* Assigns the class content to a width of 75%, make the block appear inline, and give a 20 px left margin. */
 .content {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
 
+/* Applies the properties to the class, benefits */
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -108,24 +114,26 @@ footer h2 {
     background-color: #2589bd;
 }
 
+/* Applies margin and text color to article tags within class benefits. */
 .benefits article {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-
+/* Applies changes to class, benefits' article h3 headings */
 .benefits article h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-
+/* Applies changes to class, benefits' article images */
 .benefits article img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
 
+/* Applies changes to aritcles withing the class, content */
 .content article {
     margin-bottom: 20px;
     padding: 50px;
@@ -134,11 +142,14 @@ footer h2 {
     background-color: #0072bb;
     color: #ffffff;
 }
+
+/* Styling for image material with class content articles */
 .content article img {
     max-height: 200px;
 }
 
+/* Styling for h2 headers within class content articles */
 .content article h2 {
     margin-bottom: 20px;
     font-size: 36px;
-};
+}
